--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
             <div class="login-wrapper">
                 <label for="login-pass" class="login-labels">Пароль</label>
-                <input type="password" placeholder="Введите свой пароль" id="login-pass" class="login-input">
+                <input type="text" placeholder="Введите свой пароль" id="login-pass" class="login-input">
             </div>
 
             <button id="login" class="login">ВОЙТИ</button>
